[gd_scene load_steps=32 format=2]

[ext_resource path="res://Assets/Characters/cow.png" type="Texture" id=1]
[ext_resource path="res://Game/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Combat/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Combat/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/Enemies/EnemyStats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game/Enemies/Cow.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 336, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 432, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 528, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 624, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 672, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 720, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 816, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 864, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 912, 0, 48, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Walk",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=22]
radius = 5.0
height = 16.0

[sub_resource type="CircleShape2D" id=23]
radius = 124.0

[sub_resource type="CapsuleShape2D" id=24]
radius = 23.0
height = 24.0

[sub_resource type="CapsuleShape2D" id=25]
radius = 8.66667
height = 14.6667

[node name="Cow" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
scale = Vector2( 2, 2 )
frames = SubResource( 5 )
animation = "Walk"
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 13 )
rotation = -1.5708
scale = Vector2( 2, 2 )
shape = SubResource( 22 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 23 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 1, 0, 1 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -4 )
rotation = -1.5708
shape = SubResource( 24 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -4 )
rotation = -1.5708
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 25 )

[node name="EnemyStats" parent="." instance=ExtResource( 5 )]
max_health = 4
level = 2
damage = 1
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]

[editable path="PlayerDetectionZone"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
